# stt-train

./: Cargo.toml  README.md  build.rs  config.toml
src/: functions.rs  gpu.rs  hmm_gmm.rs  lib.rs  monophone.rs  phone_state_path.rs  real_time.rs  settings.rs  traits.rs  types.rs
src/cuda/: gmm_functions.cu  gmm_functions.cuh  lib.cu  stt.cu
src/hmm_gmm/: gaussian.rs  gmm.rs
src/monophone/: baum_welch_impl.rs  bigram.rs  viterbi_impl.rs
src/traits/: baum_welch_trait.rs  viterbi_trait.rs
src/wgsl/: constants.wgsl  gaussian_types.wgsl  gmm_bindings.wgsl  gmm_functions.wgsl  stt.wgsl
